--- a/helm/oauth2-proxy/templates/deployment.yaml
+++ b/helm/oauth2-proxy/templates/deployment.yaml
@@ -48,6 +48,9 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         args:
           - --http-address=0.0.0.0:4180
+        {{- if .Values.metrics.enabled }}
+          - --metrics-address=0.0.0.0:{{ .Values.metrics.port }}
+        {{- end }}
         {{- if .Values.config.cookieName }}
           - --cookie-name={{ .Values.config.cookieName }}
         {{- end }}
@@ -136,6 +139,11 @@ spec:
           - containerPort: 4180
             name: {{ .Values.httpScheme }}
             protocol: TCP
+          {{- if .Values.metrics.enabled }}
+          - containerPort: {{ .Values.metrics.port }}
+            name: metrics
+            protocol: TCP
+          {{- end }}
 {{- if .Values.livenessProbe.enabled }}
         livenessProbe:
           httpGet:
